--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mongo
     restart: always
     ports:
-      - 8080:27017
+      - 27017:27017
     env_file:
       - .env
 
@@ -16,4 +16,10 @@ services:
       - 8081:8081
     env_file:
       - .env
+
+  redis:
+    image: redis:6.0.4
+    restart: always
+    ports: 
+      - 6379:6379
 
