Load api container with database through compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     restart: always
     ports: 
       - 8081:8081
+    depends_on:
+      - mongo
     env_file:
       - .env
 
@@ -22,4 +24,18 @@ services:
     restart: always
     ports: 
       - 6379:6379
+
+  api:
+    build:
+      context: ./api
+    ports: 
+      - 3000:3000
+    depends_on:
+      - mongo
+      - mongo-express
+      - redis
+    env_file:
+      - .env
+    network_mode: host
+    restart: always
 
